# mylib

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  ReaderStandalone.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  export.rs  external_meta.rs  fb2.rs  fb2_epub.rs  index.rs  inpx.rs  lib.rs  library.rs  main.rs  model.rs  opds.rs  reader.rs  share.rs
src/components/: AboutDialog.tsx  ActiveFilterChips.tsx  AddToListMenu.tsx  AlphabetIndex.tsx  AuthorPage.tsx  BookDetail.tsx  BookList.tsx  Breadcrumbs.tsx  CenterLoader.tsx  ExportButton.tsx  ExportOverlay.tsx  FilterPanel.tsx  GenresBrowse.tsx  ImportOverlay.tsx  LanguagePicker.tsx  LanguagesBrowse.tsx  LibraryHome.tsx  ListPage.tsx  Reader.tsx  ScopeChips.tsx  SearchResults.tsx  SelectionBar.tsx  SelectionDrawer.tsx  SeriesAlphabet.tsx  SeriesPage.tsx  ShareBar.tsx  Sidebar.tsx
src/lib/: api.ts  cache.ts  genresRu.ts  readerWindow.ts  selection.ts  types.ts  updater.ts  useSWR.ts
