[package]
name = "mylib"
version = "0.2.0"
description = "Native INPX library viewer"
edition = "2021"
rust-version = "1.77"

[lib]
name = "mylib_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
encoding_rs = "0.8"
quick-xml = { version = "0.37", features = ["encoding"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tiny_http = "0.12"
urlencoding = "2"
ureq = { version = "2", features = ["tls", "json"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
